# pixel_battle

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: config.py  injectors.py  main.py  repository.py  schemas.py  utils.py
app/static/: script.js  style.css
app/templates/: index.html
nginx/: nginx.conf
tmp/: index.html  script.js  style.css
